Try to fix main-container overflow issues on mobile

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
